# torchdynamo_native

./: .clang-format  .clang-tidy  .clangd  .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py
codegen/: gen.py  utils.py
helper/: clang-format.sh  clang-tidy.sh
helper/codegen/: gen.py  glregfn.py  regfn.py
include/tdnat/: c_abi.h  factories.h  function.h  function_inl.h  jit_api.h  llvm.h  llvm_function_builder.h  llvm_function_type.h  llvm_type.h  ops.h  ops_util.h  utils.h
lib/: CMakeLists.txt  function.cpp  jit_function.cpp  llvm_function_builder.cpp  ops.cpp
lib/templates/: c_abi_wrappers.h  global_register_function.cpp  register_function.cpp
lib/tests/: CMakeLists.txt  function_test.cpp  identity_jit_test.cpp  jit_identity_test.cpp  jit_ops_test.cpp  jit_utils.h  link_test.cpp  llvm_type_test.cpp  test_utils.h  tollvmtype_test.cpp  types.h
tests/: dynamo_test.py  function_test.py  ops_test.py
torchdynamo_native/: __init__.py  compiler.py  convert.py  schema.py  utils.py
torchdynamo_native/_C/: __init__.pyi
torchdynamo_native/buildhelper/codegen/: glregfn.py  kernel.py  regfn.py  utils.py
torchdynamo_native/csrc/: init.cpp  ops.cpp  ops.h  utils.h
torchdynamo_native/csrc/templates/: aten_ops.cpp  aten_ops.h
torchdynamo_native/testing/: __init__.py  utils.py
